// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconWrapper should hide children elements 1`] = `
<_default
  hideChildren={true}
  icon={
    <svg
      aria-hidden="true"
      height="1em"
      role="img"
      viewBox="0 0 512 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm92.49 313l-20 25a16 16 0 01-22.49 2.5l-67-49.72a40 40 0 01-15-31.23V112a16 16 0 0116-16h32a16 16 0 0116 16v144l58 42.5a16 16 0 012.49 22.5z"
        fill="currentColor"
      />
    </svg>
  }
>
  <span
    className="gb-icon"
    dangerouslySetInnerHTML={
      Object {
        "__html": <svg
          aria-hidden="true"
          height="1em"
          role="img"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm92.49 313l-20 25a16 16 0 01-22.49 2.5l-67-49.72a40 40 0 01-15-31.23V112a16 16 0 0116-16h32a16 16 0 0116 16v144l58 42.5a16 16 0 012.49 22.5z"
            fill="currentColor"
          />
        </svg>,
      }
    }
  />
</_default>
`;

exports[`IconWrapper should render children elements 1`] = `
<_default>
  <ChildrenComponent>
    <h2>
       
      My children component
       
    </h2>
  </ChildrenComponent>
</_default>
`;

exports[`IconWrapper should render left icon 1`] = `
<_default
  icon={
    <svg
      aria-hidden="true"
      height="1em"
      role="img"
      viewBox="0 0 512 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm92.49 313l-20 25a16 16 0 01-22.49 2.5l-67-49.72a40 40 0 01-15-31.23V112a16 16 0 0116-16h32a16 16 0 0116 16v144l58 42.5a16 16 0 012.49 22.5z"
        fill="currentColor"
      />
    </svg>
  }
>
  <span
    className="gb-icon"
    dangerouslySetInnerHTML={
      Object {
        "__html": <svg
          aria-hidden="true"
          height="1em"
          role="img"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm92.49 313l-20 25a16 16 0 01-22.49 2.5l-67-49.72a40 40 0 01-15-31.23V112a16 16 0 0116-16h32a16 16 0 0116 16v144l58 42.5a16 16 0 012.49 22.5z"
            fill="currentColor"
          />
        </svg>,
      }
    }
  />
  <ChildrenComponent>
    <h2>
       
      My children component
       
    </h2>
  </ChildrenComponent>
</_default>
`;

exports[`IconWrapper should render multiple children 1`] = `
<_default
  icon={
    <svg
      aria-hidden="true"
      height="1em"
      role="img"
      viewBox="0 0 512 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm92.49 313l-20 25a16 16 0 01-22.49 2.5l-67-49.72a40 40 0 01-15-31.23V112a16 16 0 0116-16h32a16 16 0 0116 16v144l58 42.5a16 16 0 012.49 22.5z"
        fill="currentColor"
      />
    </svg>
  }
>
  <span
    className="gb-icon"
    dangerouslySetInnerHTML={
      Object {
        "__html": <svg
          aria-hidden="true"
          height="1em"
          role="img"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm92.49 313l-20 25a16 16 0 01-22.49 2.5l-67-49.72a40 40 0 01-15-31.23V112a16 16 0 0116-16h32a16 16 0 0116 16v144l58 42.5a16 16 0 012.49 22.5z"
            fill="currentColor"
          />
        </svg>,
      }
    }
  />
  <ChildrenComponent>
    <h2>
       
      My children component
       
    </h2>
  </ChildrenComponent>
  <ChildrenComponent>
    <h2>
       
      My children component
       
    </h2>
  </ChildrenComponent>
  <ChildrenComponent>
    <h2>
       
      My children component
       
    </h2>
  </ChildrenComponent>
</_default>
`;

exports[`IconWrapper should render right icon 1`] = `
<_default
  direction="right"
  icon={
    <svg
      aria-hidden="true"
      height="1em"
      role="img"
      viewBox="0 0 512 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm92.49 313l-20 25a16 16 0 01-22.49 2.5l-67-49.72a40 40 0 01-15-31.23V112a16 16 0 0116-16h32a16 16 0 0116 16v144l58 42.5a16 16 0 012.49 22.5z"
        fill="currentColor"
      />
    </svg>
  }
>
  <ChildrenComponent>
    <h2>
       
      My children component
       
    </h2>
  </ChildrenComponent>
  <span
    className="gb-icon"
    dangerouslySetInnerHTML={
      Object {
        "__html": <svg
          aria-hidden="true"
          height="1em"
          role="img"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm92.49 313l-20 25a16 16 0 01-22.49 2.5l-67-49.72a40 40 0 01-15-31.23V112a16 16 0 0116-16h32a16 16 0 0116 16v144l58 42.5a16 16 0 012.49 22.5z"
            fill="currentColor"
          />
        </svg>,
      }
    }
  />
</_default>
`;

exports[`IconWrapper should render with wrapper element 1`] = `
<_default
  hideWrapper={false}
  icon={
    <svg
      aria-hidden="true"
      height="1em"
      role="img"
      viewBox="0 0 512 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm92.49 313l-20 25a16 16 0 01-22.49 2.5l-67-49.72a40 40 0 01-15-31.23V112a16 16 0 0116-16h32a16 16 0 0116 16v144l58 42.5a16 16 0 012.49 22.5z"
        fill="currentColor"
      />
    </svg>
  }
  wrapperClassname="my-wrapper-class"
>
  <span
    className="gb-icon"
    dangerouslySetInnerHTML={
      Object {
        "__html": <svg
          aria-hidden="true"
          height="1em"
          role="img"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm92.49 313l-20 25a16 16 0 01-22.49 2.5l-67-49.72a40 40 0 01-15-31.23V112a16 16 0 0116-16h32a16 16 0 0116 16v144l58 42.5a16 16 0 012.49 22.5z"
            fill="currentColor"
          />
        </svg>,
      }
    }
  />
  <ChildrenComponent>
    <h2>
       
      My children component
       
    </h2>
  </ChildrenComponent>
</_default>
`;

exports[`IconWrapper should render without children 1`] = `
<_default
  icon={
    <svg
      aria-hidden="true"
      height="1em"
      role="img"
      viewBox="0 0 512 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm92.49 313l-20 25a16 16 0 01-22.49 2.5l-67-49.72a40 40 0 01-15-31.23V112a16 16 0 0116-16h32a16 16 0 0116 16v144l58 42.5a16 16 0 012.49 22.5z"
        fill="currentColor"
      />
    </svg>
  }
>
  <span
    className="gb-icon"
    dangerouslySetInnerHTML={
      Object {
        "__html": <svg
          aria-hidden="true"
          height="1em"
          role="img"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm92.49 313l-20 25a16 16 0 01-22.49 2.5l-67-49.72a40 40 0 01-15-31.23V112a16 16 0 0116-16h32a16 16 0 0116 16v144l58 42.5a16 16 0 012.49 22.5z"
            fill="currentColor"
          />
        </svg>,
      }
    }
  />
</_default>
`;
